--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
+    "axios": "^1.5.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "material-icons": "^1.13.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "sort-by": "^1.2.0",
-    "swr": "^2.2.2",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
