--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.46.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "zustand": "^4.4.1"
   },
