--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.1",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "axios": "^1.5.0",
@@ -26,6 +27,7 @@
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
+    "yup": "^1.3.0",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
