--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "match-sorter": "^6.3.1",
     "material-icons": "^1.13.11",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-query": "^3.39.3",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
+    "@types/react-beautiful-dnd": "^13.1.5",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
