--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "axios": "^1.5.0",
+    "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "material-icons": "^1.13.11",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-query": "^3.39.3",
