--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "material-icons": "^1.13.11",
@@ -32,6 +34,7 @@
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
+    "url": "^0.11.3",
     "yup": "^1.3.0",
     "zustand": "^4.4.1"
   },
