--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_API_BASE_URL = http://192.168.1.13:3000/api/v1
+VITE_VAPID_PUBLIC_KEY=BCVuX-CUq8rtoyKJ9uHnuCwdnRt_B1KvrT6MxDvEwOu5vwqT_cykCVzSHamYOpdYakDQircI6SxGvFXkEV8ze_w
+
