--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "url": "^0.11.3",
+    "vite-plugin-pwa": "^0.16.7",
     "yup": "^1.3.0",
     "zustand": "^4.4.1"
   },
