--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.19.0",
     "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.2",
     "sort-by": "^1.2.0",
     "url": "^0.11.3",
     "vite-plugin-pwa": "^0.16.7",
